Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 <p>DIY Kit to use for a soldering workshop with kids.</p>
 
+<p><img src="https://raw.githubusercontent.com/phyx-be/FABLAB_BADGE/master/FABLAB_BADGE_01/IMG_PCBs.jpg" alt="PCB image"></p>
+
 <h2>
 <a id="rev-00" class="anchor" href="#rev-00" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rev 00</h2>
 
@@ -41,7 +43,24 @@
 <p>The kit requires a CR2032 battery, a CR2032 battery holder and 2 LEDs with a forward voltage higher than 3V. It's designed to cost less than €1 when bought in volumes of 100. It's a collaboration between <a href="https://www.fablab-leuven.be/">FabLab Leuven</a>, <a href="http://www.trakk.be/">Trakk</a>, <a href="http://imal.org/">iMal</a> and <a href="http://www.fablabgenk.be/">Fablab Genk</a>. It was designed during the <a href="http://medialab-prado.es/article/objetos-comunes">Objects in Common</a> organised by the <a href="http://medialab-prado.es/">Medialab Prado</a> and <a href="http://www.constantvzw.org/">Constant VZW</a>.</p>
 
 <h2>
+<a id="rev-01" class="anchor" href="#rev-01" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Rev 01</h2>
+
+<p><img src="https://raw.githubusercontent.com/phyx-be/FABLAB_BADGE/master/FABLAB_BADGE_01/3D_VIEW_TOP.png" alt="FABLAB_BADGE_01"></p>
+
+<h3>
+<a id="changes" class="anchor" href="#changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Changes</h3>
+
+<ul>
+<li>increased pad size for LEDs</li>
+<li>increased thermal relief size</li>
+<li>increased drill size on the battery holder pads</li>
+<li>updated the FabLab Genk logo to include "Genk" in the soldermask layer</li>
+</ul>
+
+<h2>
 <a id="assembly-instructions" class="anchor" href="#assembly-instructions" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Assembly instructions</h2>
+
+<p><img src="https://raw.githubusercontent.com/phyx-be/FABLAB_BADGE/master/FABLAB_BADGE_01/IMG_PARTS.jpg" alt="parts"></p>
 
 <ul>
 <li>TODO : French, Dutch and English instructions.</li>
