Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fablab badge by phyx-be</title>
+    <title>FABLAB BADGE by phyx-be</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Fablab badge</h1>
+        <h1>FABLAB BADGE</h1>
         <p>Small badge for soldering workshops with kids.</p>
 
         <p class="view"><a href="https://github.com/phyx-be/FABLAB_BADGE">View the Project on GitHub <small>phyx-be/FABLAB_BADGE</small></a></p>
